--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -5,24 +5,29 @@
     "description": "شارك في رحلات قراءة القرآن مع الآخرين."
   },
   "nav": {
-    "home": "الصفحة الرئيسية",
-    "khatmah": "الختمة",
-    "calendar": "التقويم الهجري",
-    "qibla": "القبلة",
-    "tasbeeh": "تسبيح"
+    "home": "الرئيسية",
+    "khatmah": "الختمات",
+    "calendar": "مواقيت الصلاة",
+    "qibla": "بوصلة القبلة",
+    "tasbeeh": "التسبيح",
+    "quran": "القرآن الكريم"
   },
   "features": {
     "khatmah": {
       "title": "ختمات القرآن",
-      "description": "شارك في رحلات قراءة القرآن الجماعية مع الآخرين."
+      "description": "شارك في رحلات قراءة القرآن التعاونية مع الآخرين."
     },
     "calendar": {
-      "title": "التقويم الهجري",
-      "description": "تصفح التقويم الهجري ومعرفة المناسبات الإسلامية."
+      "title": "مواقيت الصلاة",
+      "description": "احصل على مواقيت الصلاة الدقيقة بناءً على موقعك."
     },
     "qibla": {
       "title": "بوصلة القبلة",
       "description": "اعثر على اتجاه القبلة من أي مكان في العالم."
+    },
+    "quran": {
+      "title": "قارئ القرآن",
+      "description": "اقرأ واستمع إلى القرآن الكريم مع التلاوة الصوتية."
     },
     "ageCalculator": {
       "title": "حاسبة العمر",
@@ -244,33 +249,31 @@
   },
   "compass": {
     "title": "البوصلة",
-    "permissionNeeded": "يلزم الوصول إلى البوصلة",
-    "iOSPermissionNeeded": "يتطلب نظام iOS إذنًا لاستخدام البوصلة. يرجى النقر على 'السماح بالوصول' أدناه.",
-    "allowAccess": "السماح بالوصول",
-    "notSupported": "البوصلة غير مدعومة على جهازك.",
-    "useGeolocation": "استخدم موقعك الحالي",
-    "detectLocation": "تحديد الموقع",
-    "detecting": "جاري التحديد...",
-    "accuracy": "الدقة",
-    "accuracyHigh": "عالية",
-    "accuracyMedium": "متوسطة",
-    "accuracyLow": "منخفضة",
-    "accuracyUnreliable": "غير موثوقة",
-    "calibrationInstructions": "تعليمات المعايرة",
-    "holdDeviceFlat": "١. امسك جهازك بشكل مستوٍ",
-    "moveInFigure8": "٢. حرك جهازك على شكل رقم ٨",
-    "rotateDevice360": "٣. قم بتدوير جهازك ٣٦٠ درجة",
-    "keepAwayFromMetal": "٤. ابقِ الجهاز بعيداً عن المعادن",
-    "manualCalibration": "بدء المعايرة",
-    "holdFlat": "يرجى حمل الجهاز بشكل مستوٍ",
-    "north": "شمال",
-    "northEast": "شمال شرق",
-    "east": "شرق",
-    "southEast": "جنوب شرق",
-    "south": "جنوب",
-    "southWest": "جنوب غرب",
-    "west": "غرب",
-    "northWest": "شمال غرب"
+    "stopCompass": "إيقاف البوصلة",
+    "locationServices": "خدمات الموقع",
+    "locationInfo": "معلومات الموقع",
+    "latitude": "خط العرض",
+    "longitude": "خط الطول",
+    "location": "الموقع",
+    "height": "الارتفاع",
+    "sunInfo": "معلومات الشمس",
+    "sunrise": "شروق الشمس",
+    "sunset": "غروب الشمس",
+    "qiblaDirection": "اتجاه القبلة",
+    "enableLocation": "تمكين خدمات الموقع لعرض اتجاه القبلة",
+    "unknown": "غير معروف",
+    "qiblaIs": "اتجاه القبلة هو",
+    "fromYourLocation": "من موقعك",
+    "distanceToMecca": "المسافة إلى مكة",
+    "compassStopped": "تم إيقاف البوصلة",
+    "grantPermission": "للوصول إلى هذه الميزة، يجب منح الإذن",
+    "notSupported": "الإذن المطلوب غير مدعوم على جهازك",
+    "deviceOrientationNotSupported": "توجيه الجهاز غير مدعوم على جهازك",
+    "permissionDenied": "رفض المستخدم طلب تحديد الموقع الجغرافي.",
+    "positionUnavailable": "معلومات الموقع غير متاحة.",
+    "timeout": "انتهت مهلة محاولة الحصول على الموقع.",
+    "locationNote": "يجب تمكين خدمات الموقع لعرض اتجاه القبلة",
+    "qibla": "قِبْلَة"
   },
   "common": {
     "save": "حفظ",
@@ -340,5 +343,67 @@
     "waningGibbous": "الأحدب المتناقص",
     "lastQuarter": "التربيع الأخير",
     "waningCrescent": "الهلال المتناقص"
+  },
+  "quran": {
+    "title": "قارئ القرآن",
+    "surahList": "قائمة السور",
+    "loading": "جاري التحميل...",
+    "error": "خطأ في تحميل البيانات",
+    "selectSurah": "اختر سورة",
+    "listenToSurah": "استماع إلى السورة",
+    "listenToPage": "استماع إلى الصفحة",
+    "pauseAudio": "إيقاف مؤقت",
+    "resumeAudio": "استئناف",
+    "stopAudio": "إيقاف",
+    "selectLanguage": "اختر اللغة",
+    "selectReciter": "اختر القارئ",
+    "arabicText": "النص العربي",
+    "translation": "الترجمة",
+    "ayah": "آية",
+    "juz": "جزء",
+    "page": "صفحة",
+    "search": "بحث",
+    "searchQuran": "البحث في القرآن",
+    "searchPlaceholder": "أدخل الكلمات للبحث...",
+    "searching": "جاري البحث...",
+    "searchResults": "تم العثور على {count} نتيجة",
+    "noSearchResults": "لم يتم العثور على نتائج لبحثك",
+    "searchError": "خطأ في البحث في نص القرآن",
+    "allSurahs": "جميع السور",
+    "englishTranslations": "التراجم الإنجليزية",
+    "verse": "آية",
+    "bismillah": "بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ",
+    "networkError": "خطأ في الشبكة. يرجى التحقق من اتصالك.",
+    "loadingAudio": "جاري تحميل الصوت...",
+    "clickToListen": "انقر للاستماع إلى هذه الآية",
+    "downloadingAudio": "جاري تنزيل الصوت...",
+    "audioNotAvailable": "الصوت غير متوفر لهذه الآية",
+    "noSurahSelected": "لم يتم اختيار سورة",
+    "selectSurahPrompt": "الرجاء اختيار سورة من القائمة",
+    "verseByVerse": "آية بآية",
+    "audio": "صوتي",
+    "text": "نص",
+    "translations": "التراجم",
+    "reciters": "القراء",
+    "loadingTranslations": "جاري تحميل التراجم...",
+    "loadingReciters": "جاري تحميل القراء...",
+    "noTranslationsAvailable": "لا توجد تراجم متاحة",
+    "noRecitersAvailable": "لا يوجد قراء متاحون",
+    "fallbackAudioAttempt": "جاري محاولة مصدر صوتي بديل...",
+    "tryingVerseByVerse": "الصوت الكامل للسورة غير متوفر. جاري تشغيل الآيات واحدة تلو الأخرى.",
+    "playingVerseByVerse": "جاري تشغيل السورة آية بآية",
+    "surahView": "عرض السور",
+    "bookView": "عرض المصحف",
+    "gotoPage": "انتقل إلى صفحة",
+    "go": "انتقل",
+    "previousPage": "السابق",
+    "nextPage": "التالي",
+    "pageOf": "صفحة {current} من {total}",
+    "surahInPage": "السور الموجودة في هذه الصفحة",
+    "playingPageVerseByVerse": "تشغيل آيات الصفحة بالتسلسل",
+    "noAyahsOnPage": "لا توجد آيات متاحة للصوت في هذه الصفحة",
+    "playingAyah": "تشغيل الآية {current} من {total}",
+    "verses": "آيات",
+    "loadingMore": "جارٍ تحميل المزيد من الآيات..."
   }
 }
