--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -10,7 +10,8 @@
     "khatmah": "Khatmahs",
     "calendar": "Prayer Times",
     "qibla": "Qibla Compass",
-    "tasbeeh": "Tasbeeh"
+    "tasbeeh": "Tasbeeh",
+    "quran": "Quran"
   },
   "features": {
     "khatmah": {
@@ -24,6 +25,10 @@
     "qibla": {
       "title": "Qibla Compass",
       "description": "Find the direction of Qibla from anywhere in the world."
+    },
+    "quran": {
+      "title": "Quran Reader",
+      "description": "Read and listen to the Holy Quran with audio recitation."
     },
     "ageCalculator": {
       "title": "Age Calculator",
@@ -271,7 +276,31 @@
     "moveInFigure8": "2. Move your device in a figure-8 pattern",
     "rotateDevice360": "3. Rotate your device 360 degrees",
     "keepAwayFromMetal": "4. Keep away from metal objects",
-    "holdFlat": "Please hold your device flat"
+    "holdFlat": "Please hold your device flat",
+    "stopCompass": "Stop Compass",
+    "locationServices": "Location Services",
+    "locationInfo": "Location Information",
+    "latitude": "Latitude",
+    "longitude": "Longitude",
+    "location": "Location",
+    "height": "Height (AMSL)",
+    "sunInfo": "Sun Information",
+    "sunrise": "Sunrise",
+    "sunset": "Sunset",
+    "qiblaDirection": "Qibla Direction",
+    "enableLocation": "Enable location services to display Qibla direction",
+    "unknown": "Unknown",
+    "qiblaIs": "Qibla is",
+    "fromYourLocation": "from your location",
+    "distanceToMecca": "Distance to Mecca",
+    "compassStopped": "Compass Stopped",
+    "grantPermission": "To access this feature, permission must be granted",
+    "deviceOrientationNotSupported": "Device orientation is not supported on your device",
+    "permissionDenied": "User denied the request for Geolocation.",
+    "positionUnavailable": "The location information is not available.",
+    "timeout": "The attempt to obtain location has timed out.",
+    "locationNote": "Location needs to be enabled for the qibla to appear",
+    "qibla": "QIBLA"
   },
   "common": {
     "save": "Save",
@@ -341,5 +370,77 @@
     "waningGibbous": "Waning Gibbous",
     "lastQuarter": "Last Quarter",
     "waningCrescent": "Waning Crescent"
+  },
+  "quran": {
+    "title": "Quran Reader",
+    "surahList": "Surah List",
+    "loading": "Loading...",
+    "error": "Error loading data",
+    "selectSurah": "Select a Surah",
+    "listenToSurah": "Listen to Surah",
+    "listenToPage": "Listen to Page",
+    "pauseAudio": "Pause Audio",
+    "resumeAudio": "Resume Audio",
+    "stopAudio": "Stop Audio",
+    "selectLanguage": "Select Language",
+    "selectReciter": "Select Reciter",
+    "arabicText": "Arabic Text",
+    "translation": "Translation",
+    "ayah": "Ayah",
+    "juz": "Juz",
+    "page": "Page",
+    "search": "Search",
+    "searchQuran": "Search Quran",
+    "searchPlaceholder": "Enter keywords to search...",
+    "searching": "Searching...",
+    "searchResults": "{count} results found",
+    "noSearchResults": "No results found for your search",
+    "searchError": "Error searching Quran text",
+    "allSurahs": "All Surahs",
+    "englishTranslations": "English Translations",
+    "navigatingToVerse": "Navigating to Quran verse",
+    "verse": "Verse",
+    "advancedSearch": "Advanced Search",
+    "bismillah": "بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ",
+    "networkError": "Network error. Please check your connection.",
+    "loadingAudio": "Loading audio...",
+    "clickToListen": "Click to listen to this verse",
+    "downloadingAudio": "Downloading audio...",
+    "audioNotAvailable": "Audio not available for this verse",
+    "noSurahSelected": "No Surah selected",
+    "selectSurahPrompt": "Please select a Surah from the list",
+    "verseByVerse": "Verse by verse",
+    "audio": "Audio",
+    "text": "Text",
+    "translations": "Translations",
+    "reciters": "Reciters",
+    "loadingTranslations": "Loading translations...",
+    "loadingReciters": "Loading reciters...",
+    "noTranslationsAvailable": "No translations available",
+    "noRecitersAvailable": "No reciters available",
+    "fallbackAudioAttempt": "Trying alternative audio source...",
+    "tryingVerseByVerse": "Full surah audio not available. Playing verses one by one instead.",
+    "playingVerseByVerse": "Playing surah verse by verse",
+    "surahView": "Surah View",
+    "bookView": "Book View",
+    "gotoPage": "Go to page",
+    "go": "Go",
+    "previousPage": "Previous",
+    "nextPage": "Next",
+    "pageOf": "Page {current} of {total}",
+    "surahInPage": "Surah contained in this page",
+    "playingPageVerseByVerse": "Playing page verses sequentially",
+    "noAyahsOnPage": "No ayahs available for audio on this page",
+    "playingAyah": "Playing ayah {current} of {total}",
+    "verses": "verses",
+    "loadingMore": "Loading more verses...",
+    "loadMore": "Load More Results",
+    "english": "English",
+    "french": "French",
+    "indonesian": "Indonesian",
+    "turkish": "Turkish",
+    "urdu": "Urdu",
+    "russian": "Russian",
+    "persian": "Persian"
   }
 } 
