--- a/frontend/src/locales/fa.json
+++ b/frontend/src/locales/fa.json
@@ -134,9 +134,9 @@
   },
   "compass": {
     "title": "قطب‌نما",
-    "permissionNeeded": "دسترسی به قطب‌نما مورد نیاز است. لطفاً اجازه جهت‌گیری دستگاه را بدهید.",
+    "permissionNeeded": "دسترسی به قطب‌نما مورد نیاز است",
     "allowAccess": "اجازه دسترسی",
-    "notSupported": "قطب‌نما در دستگاه شما پشتیبانی نمی‌شود.",
+    "notSupported": "قطب‌نما در دستگاه شما پشتیبانی نمی‌شود",
     "useGeolocation": "استفاده از موقعیت فعلی",
     "detectLocation": "تشخیص موقعیت",
     "detecting": "در حال تشخیص...",
@@ -146,11 +146,35 @@
     "accuracyLow": "پایین",
     "accuracyUnknown": "نامشخص",
     "magneticDeclination": "انحراف مغناطیسی",
-    "calibrationNeeded": "قطب‌نما نیاز به کالیبراسیون دارد. دستگاه خود را به شکل عدد ۸ حرکت دهید.",
+    "calibrationNeeded": "قطب‌نما نیاز به کالیبراسیون دارد",
     "showSettings": "نمایش تنظیمات",
     "hideSettings": "پنهان کردن تنظیمات",
-    "manualCalibration": "تنظیم دستی قطب‌نما",
-    "calibrationTip": "اگر جهت قطب‌نما دقیق نیست، آن را با این کنترل‌ها تنظیم کنید."
+    "manualCalibration": "شروع کالیبراسیون",
+    "calibrationTip": "اگر جهت قطب‌نما درست نیست، با این کنترل‌ها آن را تنظیم کنید",
+    "stopCompass": "توقف قطب‌نما",
+    "locationServices": "خدمات مکان",
+    "locationInfo": "اطلاعات مکان",
+    "latitude": "عرض جغرافیایی",
+    "longitude": "طول جغرافیایی",
+    "location": "موقعیت",
+    "height": "ارتفاع",
+    "sunInfo": "اطلاعات خورشید",
+    "sunrise": "طلوع آفتاب",
+    "sunset": "غروب آفتاب",
+    "qiblaDirection": "جهت قبله",
+    "enableLocation": "برای نمایش جهت قبله، خدمات مکان را فعال کنید",
+    "unknown": "نامشخص",
+    "qiblaIs": "قبله",
+    "fromYourLocation": "از موقعیت شما",
+    "distanceToMecca": "فاصله تا مکه",
+    "compassStopped": "قطب‌نما متوقف شد",
+    "grantPermission": "برای دسترسی به این ویژگی، باید اجازه داده شود",
+    "deviceOrientationNotSupported": "جهت‌گیری دستگاه در دستگاه شما پشتیبانی نمی‌شود",
+    "permissionDenied": "کاربر درخواست موقعیت جغرافیایی را رد کرد",
+    "positionUnavailable": "اطلاعات مکان در دسترس نیست",
+    "timeout": "تلاش برای دریافت مکان به پایان رسید",
+    "locationNote": "برای نمایش قبله باید خدمات مکان فعال باشد",
+    "qibla": "قبله"
   },
   "qibla": {
     "title": "قبله",
