--- a/frontend/src/locales/ku.json
+++ b/frontend/src/locales/ku.json
@@ -133,24 +133,48 @@
     "shiaCalendar": "شیعە"
   },
   "compass": {
-    "title": "Kompass",
-    "permissionNeeded": "Destûra kompassê pêwîst e. Ji kerema xwe destûrê bide sererastkirina cîhaza xwe.",
-    "allowAccess": "Destûr Bide",
-    "notSupported": "Compass li cîhaza te nayê piştgirîkirin.",
-    "useGeolocation": "Cihê niha bi kar bîne",
-    "detectLocation": "Cihê Diyarkirin",
-    "detecting": "Tê diyarkirin...",
-    "accuracy": "Rêjeya Kompassê",
-    "accuracyHigh": "Bilind",
-    "accuracyMedium": "Navîn",
-    "accuracyLow": "Nizm",
-    "accuracyUnknown": "Nenas",
-    "magneticDeclination": "Xwarbûna Magnetîkî",
-    "calibrationNeeded": "Divê kompass were kalîbrekirin. Cîhaza xwe bi şêwaza 8 bihejîne.",
-    "showSettings": "Mîhengan Nîşan Bide",
-    "hideSettings": "Mîhengan Veşêre",
-    "manualCalibration": "Rasterastkirina Destî ya Kompassê",
-    "calibrationTip": "Heke aliyê kompassê nerast e, bi van kontrolan sererast bikin."
+    "title": "قیبلەنما",
+    "permissionNeeded": "ڕێگەپێدانی قیبلەنما پێویستە",
+    "allowAccess": "ڕێگەپێدان بدە",
+    "notSupported": "قیبلەنما لە ئامێرەکەتدا پشتگیری ناکرێت",
+    "useGeolocation": "شوێنی ئێستا بەکاربهێنە",
+    "detectLocation": "دۆزینەوەی شوێن",
+    "detecting": "خەریکی دۆزینەوەیە...",
+    "accuracy": "وردی قیبلەنما",
+    "accuracyHigh": "بەرز",
+    "accuracyMedium": "مامناوەند",
+    "accuracyLow": "نزم",
+    "accuracyUnknown": "نەناسراو",
+    "magneticDeclination": "لادانی موگناتیسی",
+    "calibrationNeeded": "قیبلەنما پێویستی بە کالیبرەیشن هەیە",
+    "showSettings": "پیشاندانی ڕێکخستنەکان",
+    "hideSettings": "شاردنەوەی ڕێکخستنەکان",
+    "manualCalibration": "دەستپێکردنی کالیبرەیشن",
+    "calibrationTip": "ئەگەر ئاڕاستەی قیبلەنما هەڵەیە، بەهۆی ئەم کۆنترۆڵانەوە ڕێکی بخە",
+    "stopCompass": "ڕاگرتنی قیبلەنما",
+    "locationServices": "خزمەتگوزاریەکانی شوێن",
+    "locationInfo": "زانیاری شوێن",
+    "latitude": "هێڵی پانی",
+    "longitude": "هێڵی درێژی",
+    "location": "شوێن",
+    "height": "بەرزی",
+    "sunInfo": "زانیاری خۆر",
+    "sunrise": "هەڵاتنی خۆر",
+    "sunset": "ئاوابوونی خۆر",
+    "qiblaDirection": "ئاڕاستەی قیبلە",
+    "enableLocation": "خزمەتگوزاریەکانی شوێن چالاک بکە بۆ نیشاندانی ئاڕاستەی قیبلە",
+    "unknown": "نەزانراو",
+    "qiblaIs": "قیبلە",
+    "fromYourLocation": "لە شوێنی تۆوە",
+    "distanceToMecca": "دووری بۆ مەککە",
+    "compassStopped": "قیبلەنما ڕاگیرا",
+    "grantPermission": "بۆ بەکارهێنانی ئەم تایبەتمەندیە، دەبێت ڕێگەپێدان بدرێت",
+    "deviceOrientationNotSupported": "ئاڕاستەی ئامێر لەسەر ئامێرەکەت پشتگیری ناکرێت",
+    "permissionDenied": "بەکارهێنەر داواکاری شوێنی جوگرافی ڕەتکردەوە",
+    "positionUnavailable": "زانیاری شوێن بەردەست نیە",
+    "timeout": "هەوڵدان بۆ بەدەستهێنانی شوێن کاتی تەواو بوو",
+    "locationNote": "پێویستە خزمەتگوزاریەکانی شوێن چالاک بکرێت بۆ دەرکەوتنی قیبلە",
+    "qibla": "قیبلە"
   },
   "qibla": {
     "title": "Qible",
