quran ui WAY BETTER LESGo

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -1,13 +1,14 @@
 {
   "app": {
     "title": "حسنة",
-    "subtitle": "شارك في رحلات قراءة القرآن مع الآخرين.",
-    "description": "شارك في رحلات قراءة القرآن مع الآخرين."
+    "subtitle": "التطبيق الإسلامي المجاني",
+    "description": "حسنة هو تطبيق إسلامي مجاني يقدم خدمات متعددة للمسلمين. يمكنك استخدامه لتحديد الوقت المناسب للصلاة، البحث عن القبلة، قراءة القرآن، عرض التقويم الهجري، والمزيد.",
+    "rights_reserved": "جميع الحقوق محفوظة."
   },
   "nav": {
     "home": "الرئيسية",
     "khatmah": "الختمات",
-    "calendar": "مواقيت الصلاة",
+    "calendar": "التقويم الهجري",
     "qibla": "بوصلة القبلة",
     "tasbeeh": "التسبيح",
     "quran": "القرآن الكريم"
@@ -15,27 +16,27 @@
   "features": {
     "khatmah": {
       "title": "ختمات القرآن",
-      "description": "شارك في رحلات قراءة القرآن التعاونية مع الآخرين."
+      "description": "شارك في رحلات قراءة القرآن التعاونية مع الآخرين"
     },
     "calendar": {
-      "title": "مواقيت الصلاة",
-      "description": "احصل على مواقيت الصلاة الدقيقة بناءً على موقعك."
+      "title": "التقويم الهجري",
+      "description": "التقويم الهجري حسب السيد السيساتني"
     },
     "qibla": {
       "title": "بوصلة القبلة",
-      "description": "اعثر على اتجاه القبلة من أي مكان في العالم."
+      "description": "اعثر على اتجاه القبلة من أي مكان في العالم"
     },
     "quran": {
       "title": "قارئ القرآن",
-      "description": "اقرأ واستمع إلى القرآن الكريم مع التلاوة الصوتية."
+      "description": "اقرأ واستمع إلى القرآن الكريم مع التلاوة الصوتية"
     },
     "ageCalculator": {
       "title": "حاسبة العمر",
-      "description": "احسب عمرك بالتقويمين الهجري والميلادي."
+      "description": "احسب عمرك بالتقويمين الهجري والميلادي"
     },
     "tasbeeh": {
       "title": "عداد التسبيح",
-      "description": "أداء الذكر مع عداد رقمي للأذكار الإسلامية الشائعة.",
+      "description": "أداء الذكر مع عداد رقمي للأذكار الإسلامية الشائعة",
       "selectTasbeeh": "اختر التسبيح",
       "target": "الهدف",
       "remaining": "المتبقي",
@@ -64,11 +65,15 @@
     "search": "البحث عن ختمات حسب الاسم أو المشارك...",
     "clearSearch": "مسح البحث",
     "myCreatedKhatmahs": "ختماتي التي أنشأتها",
+    "myParticipations": "مشاركاتي",
     "creator": "المنشئ",
     "private": "خاص",
     "created": "تم الإنشاء",
     "ends": "تنتهي",
     "participants": "{n} مشارك | {n} مشاركين",
+    "participant": "مشارك",
+    "joinedAs": "انضممت كـ",
+    "viewKhatmah": "عرض الختمة",
     "completed": "مكتمل",
     "management": "إدارة الختمات",
     "noKhatmahs": "لم يتم العثور على ختمات",
@@ -125,6 +130,7 @@
     "copied": "تم النسخ!",
     "shareButton": "مشاركة",
     "close": "إغلاق",
+    "assignedTo": "معين لـ",
     "manualCopyPrompt": "انسخ هذا الرابط يدويًا:"
   },
   "share": {
@@ -278,7 +284,8 @@
   "common": {
     "save": "حفظ",
     "cancel": "إلغاء",
-    "retry": "إعادة المحاولة"
+    "retry": "إعادة المحاولة",
+    "loading": "جاري التحميل..."
   },
   "ageCalculator": {
     "title": "حاسبة العمر",
@@ -372,6 +379,7 @@
     "allSurahs": "جميع السور",
     "englishTranslations": "التراجم الإنجليزية",
     "verse": "آية",
+    "advancedSearch": "بحث في القرآن",
     "bismillah": "بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ",
     "networkError": "خطأ في الشبكة. يرجى التحقق من اتصالك.",
     "loadingAudio": "جاري تحميل الصوت...",
@@ -404,6 +412,30 @@
     "noAyahsOnPage": "لا توجد آيات متاحة للصوت في هذه الصفحة",
     "playingAyah": "تشغيل الآية {current} من {total}",
     "verses": "آيات",
-    "loadingMore": "جارٍ تحميل المزيد من الآيات..."
+    "loadingMore": "جارٍ تحميل المزيد من الآيات...",
+    "searchSurah": "أدخل الكلمات للبحث عن سورة...",
+    "searchSurahResults": "تم العثور على {count} نتيجة",
+    "noSurahResults": "لم يتم العثور على نتائج لبحثك عن السورة",
+    "searchSurahError": "خطأ في البحث في السورة",
+    "bookViewPage": {
+      "page": "صفحة",
+      "displayType": "نوع العرض",
+      "quran": "قرآن",
+      "quranSimple": "قرآن (مبسط)",
+      "translation": "ترجمة",
+      "quranAndTranslation": "قرآن وترجمة",
+      "reciter": "القارئ",
+      "play": "تشغيل",
+      "loading": "جاري تحميل الصفحة {page}...",
+      "error": "فشل في تحميل الصفحة. يرجى المحاولة مرة أخرى.",
+      "noPage": "لا توجد صفحة للعرض. اختر صفحة لعرضها.",
+      "previousPage": "الصفحة السابقة",
+      "nextPage": "الصفحة التالية",
+      "playingPage": "تشغيل الصفحة {page}",
+      "playingAyah": "تشغيل {surah} {ayah}",
+      "playButton": "تشغيل"
+    },
+    "showSurahList": "عرض قائمة السور",
+    "hideSurahList": "إخفاء قائمة السور"
   }
 }
