--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -1,8 +1,8 @@
 {
   "app": {
     "title": "7sanah",
-    "subtitle": "Collaborative Quran Reading Journey",
-    "description": "Your daily companion for prayer, scripture, and spiritual growth.",
+    "subtitle": "The Islamic App",
+    "description": "7sanah is a free Islamic app that provides multiple services for Muslims. You can use it to determine the right time for prayer, search for the Qibla, read the Quran, view the Hijri calendar, and more.",
     "rights_reserved": "All rights reserved."
   },
   "nav": {
@@ -62,11 +62,15 @@
     "search": "Search khatmahs by name or participant...",
     "clearSearch": "Clear search",
     "myCreatedKhatmahs": "My Created Khatmahs",
+    "myParticipations": "My Participations",
     "creator": "Creator",
     "private": "Private",
     "created": "Created",
     "ends": "Ends",
     "participants": "{n} participant | {n} participants",
+    "participant": "Participant",
+    "joinedAs": "Joined as",
+    "viewKhatmah": "View Khatmah",
     "completed": "completed",
     "noKhatmahs": "No khatmahs found",
     "noKhatmahsMatch": "No khatmahs match your search for",
@@ -91,20 +95,25 @@
     "clickUnassigned": "Click on any unassigned juz below to select it",
     "clickAssigned": "Click on your assigned juz to read it",
     "juzAssignments": "Juz Assignments",
+    "surahAssignments": "Surah Assignments",
     "notAssigned": "Not assigned",
     "clickToSelect": "Click to select",
     "readJuz": "Read Juz",
+    "readSurah": "Read Surah",
     "markComplete": "Mark Complete",
     "markIncomplete": "Mark Incomplete",
     "inProgress": "In Progress",
     "participants": "Participants ({count})",
     "joined": "Joined",
     "juz": "Juz",
+    "surah": "Surah",
     "juzNumber": "Juz {number}",
+    "surahNumber": "Surah {number}",
     "you": "You",
     "creator": "Creator",
     "joinFirst": "Please join the khatmah first",
     "juzAlreadyAssigned": "This juz is already assigned to someone else",
+    "surahAlreadyAssigned": "This surah is already assigned to someone else",
     "leaveConfirm": "Are you sure you want to leave this khatmah? Your assignments will remain, but you will need to rejoin to make changes.",
     "noParticipations": "You haven't joined any khatmahs yet.",
     "switch": "Switch",
@@ -156,23 +165,33 @@
   },
   "createKhatmah": {
     "title": "Create New Khatmah",
+    "subtitle": "Start a new Quran reading journey",
     "nameLabel": "Khatmah Name",
     "namePlaceholder": "Enter a name for your khatmah",
     "nameHelp": "Choose a meaningful name for your khatmah",
     "nameError": "Please enter a name for your khatmah",
+    "typeLabel": "Khatmah Type",
+    "juzTypeLabel": "Juz Based",
+    "surahTypeLabel": "Surah Based",
+    "parts": "parts",
+    "surahs": "surahs",
+    "typeHelp": "Choose whether participants will read by Juz (30 parts) or by Surah (114 chapters)",
     "privateLabel": "Make this Khatmah private",
     "privateHelp": "Private khatmahs are only visible to people with the link",
     "requireNameLabel": "Require participants to enter their name",
     "requireNameHelp": "If disabled, participants can join anonymously",
+    "endDateLabel": "Set an end date",
+    "endDateInput": "Target completion date",
+    "endDateHelp": "Set a target date to complete the khatmah",
     "imageLabel": "Khatmah Image (optional)",
     "imagePlaceholder": "Enter an image URL",
     "imageHelp": "Add an image to make your khatmah more recognizable",
     "imagePreview": "Image Preview",
     "noImage": "No image provided",
-    "endDateLabel": "End Date (optional)",
-    "endDateHelp": "Set a target date to complete the khatmah",
-    "createButton": "Create Khatmah",
-    "description": "A Khatmah is a complete reading of the Quran, divided into 30 juz (parts). Create a khatmah to invite others to join you in reading the Quran together."
+    "cancel": "Cancel",
+    "create": "Create Khatmah",
+    "whatIsKhatmahTitle": "What is a Khatmah?",
+    "whatIsKhatmahText": "A Khatmah is a complete reading of the Quran. Traditional Khatmahs divide the Quran into 30 equal parts (Juz), while Surah-based Khatmahs divide it into its 114 chapters (Surahs)."
   },
   "editKhatmah": {
     "title": "Edit Khatmah",
@@ -305,7 +324,8 @@
   "common": {
     "save": "Save",
     "cancel": "Cancel",
-    "retry": "Retry"
+    "retry": "Retry",
+    "loading": "Loading..."
   },
   "ageCalculator": {
     "title": "Age Calculator",
@@ -443,6 +463,26 @@
     "russian": "Russian",
     "persian": "Persian",
     "iraqiArabic": "Iraqi Arabic Script",
-    "verseLoadingFailed": "Could not find the requested verse. Please try again."
+    "verseLoadingFailed": "Could not find the requested verse. Please try again.",
+    "bookViewPage": {
+      "page": "Page",
+      "displayType": "Display Type",
+      "quran": "Quran",
+      "quranSimple": "Quran (Simple)",
+      "translation": "Translation",
+      "quranAndTranslation": "Quran & Translation",
+      "reciter": "Reciter",
+      "play": "Play",
+      "loading": "Loading page {page}...",
+      "error": "Failed to load page. Please try again.",
+      "noPage": "No page to display. Select a page to view.",
+      "previousPage": "Previous Page",
+      "nextPage": "Next Page",
+      "playingPage": "Playing page {page}",
+      "playingAyah": "Playing {surah} {ayah}",
+      "playButton": "Play"
+    },
+    "showSurahList": "Show Surah List",
+    "hideSurahList": "Hide Surah List"
   }
 } 
