--- a/frontend/src/locales/fa.json
+++ b/frontend/src/locales/fa.json
@@ -1,7 +1,9 @@
 {
   "app": {
-    "title": "ختم قرآن",
-    "subtitle": "سفر خواندن دسته‌جمعی قرآن"
+    "title": "حسنه",
+    "subtitle": "اپلیکیشن اسلامی رایگان",
+    "description": "حسنه یک اپلیکیشن اسلامی رایگان است که خدمات متعددی را برای مسلمانان ارائه می‌دهد. می‌توانید از آن برای تعیین زمان مناسب نماز، جستجوی قبله، خواندن قرآن، مشاهده تقویم هجری و موارد دیگر استفاده کنید.",
+    "rights_reserved": "تمامی حقوق محفوظ است."
   },
   "nav": {
     "home": "خانه",
