--- a/frontend/src/locales/ku.json
+++ b/frontend/src/locales/ku.json
@@ -1,7 +1,9 @@
 {
   "app": {
-    "title": "خەتمی قورئان",
-    "subtitle": "گەشتی خوێندنەوەی بەکۆمەڵی قورئان"
+    "title": "حەسەنە",
+    "subtitle": "ئەپڵیکەیشنی ئیسلامی بەخۆڕایی",
+    "description": "حەسەنە ئەپڵیکەیشنێکی ئیسلامی بەخۆڕاییە کە چەندین خزمەتگوزاری بۆ موسڵمانان پێشکەش دەکات. دەتوانیت بەکاری بهێنیت بۆ دیاریکردنی کاتی دروستی نوێژ، گەڕان بۆ قیبلە، خوێندنەوەی قورئان، بینینی ڕۆژژمێری کۆچی، و زۆر شتی تر.",
+    "rights_reserved": "هەموو مافەکان پارێزراون."
   },
   "nav": {
     "home": "سەرەکی",
